# simple-rust-websocket

./: .gitignore  Cargo.toml  README.md
public/: index.html
src/: main.rs
