[package]
name = "simple-rust-websocket"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = "1.0.138"