[package]
name = "simple-rust-websocket"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
futures = "0.3.31"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
